update about.ejs file

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -22,7 +22,7 @@
     <%- include('./partials/nav.ejs') %> 
     <div class="blogs content">
         <h2>
-            <p>Lorem ipsum dolor sit.</p>
+            <p>This Blog app is built using express.js,node.js and other npm library. This app used NoSQL Database MongoDB. You can create your blog, edit them and delete them.</p>
         </h2>
     </div>
     <%- include('./partials/footer.ejs') %>
